@@ -13,6 +13,9 @@ checkBox.meter.energy=Stored Energy
 checkBox.meter.voltmeter=Voltmeter
 checkBox.meter.eFieldDetector=Electric Field Detector
 checkBox.showValues=Show Values
+checkBox.sum=Sum
+checkBox.plate=Plate
+checkBox.dielectric=Dielectric
 
 dielectric.custom=custom
 dielectric.teflon=teflon
@@ -62,7 +65,3 @@ units.millimetersSquared=mm<sup>2</sup>
 units.coulombs=C
 units.farads=F
 units.joules=J
-
-vector.sum=Sum
-vector.plate=Plate
-vector.dielectric=Dielectric
